<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.nexus</groupId>
    <artifactId>nexus</artifactId>
    <version>0.1-ALPHA</version>
  </parent>

  <artifactId>nexus-annotations</artifactId>

  <dependencies>
    <dependency>
      <groupId>org.nexus</groupId>
      <artifactId>nexus-commons</artifactId>
      <version>0.1-ALPHA</version>
    </dependency>

    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>4.2.7.Final</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>25</source>
          <target>25</target>
<!--          <proc>none</proc> &lt;!&ndash; Don't process annotations in this module &ndash;&gt;-->
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>